tests/macros/confirm/extension.stderr
error: option `extension` does not exist for kind `confirm`
 --> $DIR/extension.rs:2:47
  |
2 |     let q = inquisition::questions![Confirm { extension: todo!() }];
  |                                               ^^^^^^^^^
