tests/macros/confirm/extension.rs
fn main() {
    let q = inquisition::questions![Confirm { extension: todo!() }];
}
